src/test/deca/syntax/invalid/lexer/special_char_wrong-lex.corr
AND: [@0,177:178='&&',<22>,12:0]
INFO  fr.ensimag.deca.syntax.DecacErrorListner.syntaxError(DecacErrorListner.java:50) - no token, no LocationException => using input.getSourceName(): line=12
./src/test/deca/syntax/invalid/lexer/special_char_wrong.deca:12:2: token recognition error at: '&'
